# spectra

./: .gitignore  README.md  index.html  launch-spectra.bat  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
