[package]
name = "spectra"
version = "0.1.0"
edition = "2021"

[lib]
name = "spectra_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
sysinfo = "0.32"
tauri = { version = "2", features = [] }
